# termcode

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
config/: config.toml  keybindings.toml
crates/termcode-config/: Cargo.toml
crates/termcode-config/src/: config.rs  default.rs  keymap.rs  lib.rs
crates/termcode-core/: Cargo.toml
crates/termcode-core/src/: buffer.rs  config_types.rs  diagnostic.rs  encoding.rs  history.rs  lib.rs  position.rs  selection.rs  transaction.rs
crates/termcode-lsp/: Cargo.toml
crates/termcode-lsp/src/: client.rs  lib.rs  registry.rs  transport.rs  types.rs
crates/termcode-plugin/: Cargo.toml
crates/termcode-plugin/src/: api.rs  hooks.rs  lib.rs  manager.rs  sandbox.rs  types.rs
crates/termcode-plugin/tests/: integration.rs
crates/termcode-syntax/: Cargo.toml
crates/termcode-syntax/src/: highlighter.rs  language.rs  lib.rs
crates/termcode-term/: Cargo.toml
crates/termcode-term/src/: app.rs  clipboard.rs  command.rs  display_width.rs  event.rs  input.rs  layout.rs  lib.rs  lsp_bridge.rs  mouse.rs  render.rs  session.rs
crates/termcode-term/src/ui/: command_palette.rs  completion.rs  confirm_dialog.rs  editor_view.rs  file_explorer.rs  fuzzy_finder.rs  help_popup.rs  hover.rs  image_view.rs  mod.rs  overlay.rs  pane_focus.rs  search.rs  status_bar.rs  tab_bar.rs  top_bar.rs
crates/termcode-theme/: Cargo.toml
crates/termcode-theme/src/: lib.rs  loader.rs  palette.rs  style.rs  theme.rs
crates/termcode-view/: Cargo.toml
crates/termcode-view/src/: clipboard.rs  confirm.rs  document.rs  editor.rs  file_explorer.rs  fuzzy.rs  image.rs  lib.rs  palette.rs  search.rs  tab.rs  view.rs
docs/: MANUAL.md  plugin-guide.md
docs/analysis/: confirm-dialog.md  plugin-system.md  tree-sitter-highlighting.md
docs/architecture/: termcode.md
docs/plans/: confirm-dialog.md  image-viewer.md  pane-focus-indicator.md  panel-borders.md  phase2-file-explorer-tabs.md  phase3-editing.md  phase4-search.md  phase6-lsp.md  phase7-polish.md  plugin-system.md  tree-sitter-highlighting.md
docs/specs/: changelog.md  confirm-dialog.md  image-viewer.md  pane-focus-indicator.md  plugin-system.md  tree-sitter-highlighting.md
runtime/plugins/example/: init.lua  plugin.toml
runtime/queries/bash/: highlights.scm
runtime/queries/c/: highlights.scm
runtime/queries/cpp/: highlights.scm
runtime/queries/go/: highlights.scm
runtime/queries/javascript/: highlights.scm
runtime/queries/json/: highlights.scm
runtime/queries/markdown/: highlights.scm
runtime/queries/python/: highlights.scm
runtime/queries/rust/: highlights.scm
runtime/queries/toml/: highlights.scm
runtime/queries/typescript/: highlights.scm
runtime/themes/: catppuccin-mocha.toml  gruvbox-dark.toml  lazygit.toml  one-dark.toml
src/: main.rs
