[package]
name = "termcode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "termcode"

[[bin]]
name = "termcode"
path = "src/main.rs"

[dependencies]
termcode-term = { path = "crates/termcode-term" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }

[workspace]
resolver = "2"
members = [
    ".",
    "crates/termcode-core",
    "crates/termcode-syntax",
    "crates/termcode-view",
    "crates/termcode-lsp",
    "crates/termcode-theme",
    "crates/termcode-plugin",
    "crates/termcode-term",
    "crates/termcode-config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Core
ropey = "1.6"
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# Config & Serialization
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LSP
lsp-types = "0.97"

# Clipboard
arboard = "3"

# Utilities
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"
encoding_rs = "0.8"
tempfile = "3"
unicode-width = "0.2"

# Internal crates
termcode-core = { path = "crates/termcode-core" }
termcode-syntax = { path = "crates/termcode-syntax" }
termcode-view = { path = "crates/termcode-view" }
termcode-lsp = { path = "crates/termcode-lsp" }
termcode-theme = { path = "crates/termcode-theme" }
termcode-plugin = { path = "crates/termcode-plugin" }
termcode-term = { path = "crates/termcode-term" }
termcode-config = { path = "crates/termcode-config" }
