[package]
name = "termcode-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
termcode-core = { workspace = true }
termcode-theme = { workspace = true }
serde = { workspace = true }
toml.workspace = true
crossterm.workspace = true
thiserror.workspace = true
log.workspace = true
dirs = "6"
