[package]
name = "termcode-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
termcode-core = { workspace = true }
termcode-config = { workspace = true }
lsp-types = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
