[package]
name = "termcode-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
termcode-view = { workspace = true }
termcode-core = { workspace = true }
termcode-config = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dirs = "6"

[dev-dependencies]
termcode-syntax = { workspace = true }
termcode-theme = { workspace = true }
tempfile = { workspace = true }
