[package]
name = "termcode-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
termcode-core = { workspace = true }
termcode-theme = { workspace = true }
ropey.workspace = true
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-language.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-md.workspace = true
tree-sitter-bash.workspace = true
once_cell.workspace = true
thiserror.workspace = true
log.workspace = true
