[package]
name = "termcode-view"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
termcode-core = { workspace = true }
termcode-syntax = { workspace = true }
termcode-theme = { workspace = true }
anyhow.workspace = true
log.workspace = true
ignore = "0.4"
